Vertex color banding #66100

Closed
opened 2019-06-25 04:24:18 +02:00 by Jack Hood · 5 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Radeon HD 7900 Series ATI Technologies Inc. 4.4.13084 Core Profile Context 14.301.1001.0

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-24 18:46, hash: c0c1b4542f

Short description of error
The conversion from sRGB to Linear color in the workbench prepass vertex shader, results in excessive vertex color banding for dark colors.

Found in: source/blender/draw/engines/workbench/shaders/workbench_prepass_vert.glsl

Exact steps for others to reproduce the error

  1. Create a plane.
  2. Vertex Paint two vertices solid black, and the remaining two dark grey.
    The preview in Vertex Paint mode shows an expected amount of color banding.
  3. Switch back to Object Mode, and set the Viewport Shading Color to Vertex.
    The plane now shows an excessive amount of color banding.

Additional Information
Leaving the conversion from sRGB to Linear color, until later in processing seems to resolve the color banding. However my attempts to relocate it, all resulted in unintended consequences elsewhere.

Screenshot
banding.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: AMD Radeon HD 7900 Series ATI Technologies Inc. 4.4.13084 Core Profile Context 14.301.1001.0 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-24 18:46, hash: `c0c1b4542f` **Short description of error** The conversion from sRGB to Linear color in the workbench prepass vertex shader, results in excessive vertex color banding for dark colors. Found in: `source/blender/draw/engines/workbench/shaders/workbench_prepass_vert.glsl` **Exact steps for others to reproduce the error** 1) Create a plane. 2) `Vertex Paint` two vertices solid black, and the remaining two dark grey. *The preview in Vertex Paint mode shows an expected amount of color banding.* 3) Switch back to `Object Mode`, and set the `Viewport Shading Color` to `Vertex`. The plane now shows an excessive amount of color banding. **Additional Information** Leaving the conversion from sRGB to Linear color, until later in processing seems to resolve the color banding. However my attempts to relocate it, all resulted in unintended consequences elsewhere. **Screenshot** ![banding.jpg](https://archive.blender.org/developer/F7546729/banding.jpg)
Author

Added subscriber: @JHood

Added subscriber: @JHood
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Jeroen Bakker self-assigned this 2019-06-25 08:38:17 +02:00
Member

#66100.blend

@fclem we currently use GPU_RGBA8 perhaps we should plan a engine setting to use a high precision buffer for colors GPU_RGBA16F. What do you think?
will influence the color_buffer and the history_buffer

[#66100.blend](https://archive.blender.org/developer/F7546963/T66100.blend) @fclem we currently use `GPU_RGBA8` perhaps we should plan a engine setting to use a high precision buffer for colors `GPU_RGBA16F`. What do you think? will influence the color_buffer and the history_buffer

This issue was referenced by 85c3e12049

This issue was referenced by 85c3e1204991d5ce1e89eb6201727d82eb32be50
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#66100
No description provided.