source/blender/makesdna/DNA_userdef_types.h
@@ -960,6 +960,7 @@ typedef enum eUserpref_UI_Flag2 {
   USER_UIFLAG2_UNUSED_3 = (1 << 3), /* dirty */
 } eUserpref_UI_Flag2;
 
+/** #UserDef.gpu_flag */
 typedef enum eUserpref_GPU_Flag {
   USER_GPU_FLAG_NO_DEPT_PICK = (1 << 0),
   USER_GPU_FLAG_NO_EDIT_MODE_SMOOTH_WIRE = (1 << 1),
